# polytrio

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
polytrio/: __init__.py
pyspade/: __init__.py
src/: geo_utils.rs  lib.rs  shapely_utils.rs  wkb_utils.rs
tests/: test_subdomains.py  test_triangulate.py
visualize/: plot_triangulation.py
